# Arduino

./: .gitignore  .gitmodules  CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile
include/gos/arduino/test/tools/: default.h  exception.h  memory.h  options.h  setting.h  text.h  types.h  version.h.in
include/gos/arduino/test/tools/arduino/: Arduino.h  print.h  serial.h  stream.h
include/gos/arduino/test/tools/modbus/: arduinoslave.h  gam.h  slave.h
include/gos/arduino/tools/: default.h  exception.h  options.h  serial.h  setting.h  statistics.h  text.h  types.h  utilities.h  window.h
include/gos/arduino/tools/pid/: types.h
include/gos/arduino/tools/pid/modbus/: master.h  retry.h  types.h
include/gos/arduino/tools/pid/tuning/: blackbox.h  types.h
include/gos/pid/toolkit/: stability.h
libraries/: .gitignore
libraries/ParPrinter/: library.properties
libraries/Radar/: library.properties
pid/: CMakeLists.txt
pid/libpidtoolkit/: CMakeLists.txt
scripts/: pull.bat
sketches/: CMakeLists.txt
sketches/dht/: dht.ino
sketches/dht11/: dht11.ino
sketches/dht11modbus/: README.md  modbus.cpp
sketches/dht11wifimqtt/: dht11wifimqtt.ino
sketches/esp8266dht11clock/: .editorconfig  esp8266dht11clock.fzz  esp8266dht11clock.ino
sketches/hb/: hb.ino
sketches/increase/: increase.ino
sketches/ky039/: ky039.ino
sketches/maxsensors/: define.h  maxsensors.ino  pin.h  pinuno.h
sketches/reverse/: reverse.ino
sketches/testboard/: CMakeLists.txt
sketches/testboard/complex/: complex.fzz
sketches/testboard/complex/analog/: analog.ino
sketches/testboard/complex/ledtest/: ledtest.ino
sketches/testboard/complex/modbus/: binding.cpp  binding.h  display.h  eeprom.cpp  eeprom.h  format.cpp  macro.h  modbus.cpp  modbus.h  modbus.ino  type.h  value.h  variable.cpp  variable.h
sketches/testboard/complex/push/: push.ino
sketches/testboard/complex/temperaturepid/: README.md  binding.cpp  binding.h  display.cpp  display.h  eeprom.cpp  eeprom.h  fds-celsius-logo.cpp  fds-celsius-logo.h  format.cpp  format.h  macro.h  modbus.cpp  modbus.h  pid.cpp  pid.h  range.cpp  range.h  sensor.cpp  sensor.h  temperaturepid.ino  text.h  type.h  value.cpp  value.h  variable.cpp  variable.h
sketches/testboard/ledtest/: ledtest.ino
sketches/testboard/max31865test/: max31865test.ino
sketches/testboard/max6675test/: max6675test.ino
sketches/testboard/meltingpoint/: meltingpoint.ino
sketches/testboard/modbus/: modbus.cpp  modbus.ino
sketches/testboard/oledtest/: oledtest.ino
sketches/testboard/push/: push.ino
sketches/testboard/pushlong/: pushlong.ino
sketches/testboard/rs485/rs485display/: rs485display.ino
sketches/testboard/rs485/rs485modbustest/: rs485modbustest.ino
sketches/testboard/rs485/rs485simple/: rs485simple.ino
sketches/testboard/simple/: CMakeLists.txt
sketches/testboard/simple/ledtest/: ledtest.ino
sketches/testboard/simple/modbus/: CMakeLists.txt  binding.h  display.cpp  display.h  format.h  macro.h  modbus.cpp  modbus.h  modbus.ino  type.h  value.cpp  variable.cpp  variable.h
sketches/testboard/simple/modbusarduino/: modbusarduino.ino
sketches/testboard/simple/oled/: oled.ino
sketches/testboard/simple/push/: push.ino
sketches/testboard/simple/rs485/rs485test/: rs485test.ino
sketches/testboard/temperature/: fds-celsius-logo.h  modbus.cpp  modbus.h  temperature.cpp  temperature.h  temperature.ino
sketches/trinket/trinketrgb/: build.bat  trinketrgb.ino
sketches/trinket/trinketsimple/: trinketsimple.ino  upload.bat
sketches/trinket/trinketsin/: trinketsin.ino
tests/: CMakeLists.txt
tests/libpidtuning/: CMakeLists.txt  blackbox.cpp
tests/maxsensors/: CMakeLists.txt  maxsensors.cpp
tests/testboard/: CMakeLists.txt  oledtest.cpp
tests/testboard/meltingpoint/: CMakeLists.txt  meltingpoint.cpp
tests/testboard/modbus/: modbus.cpp
tests/testboard/simple/: CMakeLists.txt
tests/testboard/simple/meltingpoint/: meltingpoint.cpp
tests/testboard/simple/modbus/: CMakeLists.txt  modbus.cpp
tests/testboard/simple/oledtest/: CMakeLists.txt
tests/testboard/simple/rs485/rs485test/: CMakeLists.txt  rs485test.cpp
tests/tools/: CMakeLists.txt
tests/tools/libgosarduinotesttools/: CMakeLists.txt  arduino.cpp  arduinoslave.cpp  default.cpp  exception.cpp  gam.cpp  options.cpp  print.cpp  serial.cpp  setting.cpp  stream.cpp  text.cpp  types.cpp  version.cpp
tests/tools/modbus/: CMakeLists.txt
tests/tools/modbus/slave/: CMakeLists.txt  slave.cpp  version.rc.in
tools/: CMakeLists.txt
tools/libgosarduinotools/: CMakeLists.txt  default.cpp  exception.cpp  options.cpp  serial.cpp  setting.cpp  text.cpp  types.cpp
tools/libpidtuning/: CMakeLists.txt  blackbox.cpp
tools/modbus/: CMakeLists.txt
tools/modbus/libpidmaster/: CMakeLists.txt  master.cpp
tools/modbus/master/: CMakeLists.txt  master.cpp
tools/pidhmi/: CMakeLists.txt  configuration.cpp  configuration.h  configuration.ini  main.cpp  master.cpp  master.h  orchestration.cpp  orchestration.h  pidhmi.pro  pidparsource.cpp  pidparsource.h  resources.qrc  types.h
tools/pidhmi/qml/old/: FloatSpinBox.qml  ScopeView.qml
tools/pidhmi/qml/pid/: PidPanel.qml
tools/pidhmi/qml/qmloscilloscope/: ScopeView.qml  main.qml
tools/pidhmi/qml/scratchpad/: FloatSpinBox.qml  Scratchpad1.qml  main.qml
tools/prototype/: CMakeLists.txt
tools/prototype/audiolevels/: CMakeLists.txt
tools/prototype/qmloscilloscope/: CMakeLists.txt
tools/prototype/qmloscilloscopechart/: CMakeLists.txt
